# AWS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SESSION.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SESSION_COMPLETE.md  STRATEGY.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  security.yml  tests.yml
examples/: README.md  config.example.yaml  mock_demo.py  quickstart.py  use_services.py
src/aws_mcp_server/: __init__.py  __main__.py  aws_client.py  cache.py  config.py  metrics.py  middleware.py  models.py  rate_limiter.py  server.py
src/aws_mcp_server/services/: __init__.py  base.py  cloudwatch.py  cost_explorer.py  dynamodb.py  ec2.py  iam.py  lambda_.py  lambda_service.py  playwright_service.py  rds.py  registry.py  s3.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_playwright_service.py  test_rate_limiter.py  test_server.py  test_services_cloudwatch.py  test_services_ec2.py  test_services_integration.py  test_services_lambda.py  test_services_s3.py
