[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for safe, read-first access to AWS services."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "jonesiiiedwin0-ops" }]
keywords = ["mcp", "aws", "model-context-protocol", "ai", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/jonesiiiedwin0-ops/AWS"
Repository = "https://github.com/jonesiiiedwin0-ops/AWS"
Issues = "https://github.com/jonesiiiedwin0-ops/AWS/issues"

[project.scripts]
aws-mcp-server = "aws_mcp_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
